welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: not found: value newArray
	var tab = newArray[Color](getMondeHauteur()) 
                  ^Array1:23: error: not found: value tab
	for (n <- tab) {
                  ^